todo-app-deployment.yml
# Frontend deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app-client
  template:
    metadata:
      labels:
        app: todo-app-client
    spec:
      containers:
        - name: todo-app-client-container
          image: ayyoubzbd/todo-app-client:latest
          ports:
            - containerPort: 8080

---
# Frontent service

apiVersion: v1
kind: Service
metadata:
  name: todo-app-client-service
spec:
  selector:
    app: todo-app-client
  ports:
    - protocol: TCP
      targetPort: 8080
      port: 80

---
# Backend deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app-server
  template:
    metadata:
      labels:
        app: todo-app-server
    spec:
      containers:
        - name: todo-app-server-container
          image: ayyoubzbd/todo-app-server:latest
          ports:
            - containerPort: 4000
---
# Backend service

apiVersion: v1
kind: Service
metadata:
  name: todo-app-server-service
spec:
  selector:
    app: todo-app-server
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
  type: LoadBalancer

---
# MongoDB deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:latest
        ports:
        - containerPort: 27017

---
# MongoDB service

apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
