ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "todo-app.local"
    http:
      paths:
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: todo-app-server-service
            port:
              number: 4000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todo-app-client-service
            port:
              number: 80
